# bimpb-parallelization

./: Makefile  README.md  main.c  main_mpi.c  matvec_mpi.c  pp_timer.c  readin.c  results.xlsx
cuda/: .main_cuda.c.swp  Makefile  gl_variables.h  main_cuda.c  matvec_cuda.cu  readin.c
cuda/gmres/: gmres.c
kokkos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  env_kokkos.h  gl_constants.h  gl_variables.h  main_kokkos.cpp  matvec_kokkos.cpp  pp_timer.cpp  pp_timer.h  readin.cpp
kokkossuperpod/: CMakeLists.txt  gl_constants.h  gl_functions.h  main_kokkos.cpp  matvec_kokkos.cpp  pp_timer.cpp  pp_timer.h  readin.cpp
kokkossuperpod/gmres/: d_sign.c  daxpy.c  dcopy.c  ddot.c  dgemv.c  dnrm2.c  drot.c  drotg.c  dscal.c  dtrsv.c  f2c.h  gmres.c
serial_omp_mpi/: gl_constants.h  gl_variables.h  main.c  main_mpi.c  main_omp.c  matvec.c  matvec_omp.c  readin.c
serial_omp_mpi/gmres/: dnrm2.c
test_proteins/: 6wji.face  6wji.pqr  6wji.vert  6wji.xyzr  6yi3.face  6yi3.pqr  6yi3.vert  6yi3.xyzr  7act.face  7act.pqr  7act.vert  7act.xyzr  7cr5.face  7cr5.pqr  7cr5.vert  7cr5.xyzr  7n3c.face  7n3c.pqr  7n3c.vert  7n3c.xyzr  7sts.face  7sts.pqr  7sts.xyzr  covid_results.xlsx  pqr2xyzr.py  ~$covid_results.xlsx
tree+kokkos/: CMakeLists copy.txt  CMakeLists.txt  TABIPBstruct.h  array.h  env_kokkos.h  gl_constants.h  gl_functions.h  gl_variables.h  main_kokkos.cpp  matvec_kokkos.cpp  pp_timer.cpp  pp_timer.h  readin.cpp  tree_node_struct.h  treecode copy 2.cpp  treecode copy noloop.cpp  treecode copy.cpp  treecode no 1DD.cpp  treecode tmp.cpp  treecode.c  treecode.cpp  treecode2.cpp  treecode3 copy.cpp  treecode3.cpp  treecode_.cpp  treecode_new.cpp  treecode_old.cpp  treecode_old2.cpp  treecode_slow_loop.cpp  treecode_slow_loop2.cpp  treecodenew.cpp  utilities.cpp  utilities.h  xmalloc.cpp  xmalloc.h
tree+kokkos+team/: CMakeLists_.txt  gl_constants.h  gl_functions.h  gl_variables.h  matvec_kokkos.cpp  tree_node_struct.h  treecode.cpp  utilities.cpp
tree+kokkos/old/: treecode dev.cpp  treecode2.cpp  treecode3.cpp
tree+kokkos/treepart/: treecode.c
tree_serial/: gl_variables.h  gmon.out  main.c  matvec.c
tree_serial copy/: Makefile  gl_functions.h  gl_variables.h  readin.c
tree_serial/gmres/: drotg.c
tree_serial/treepart/: treecode.c  treecodef.c
treecode/: Makefile  gl_constants.h  gl_variables.h  main.c  matvec.c  readin.c  treecode.c
treecode/treepart/: tree_node_struct.h  treecode.c  treecode_new.c  treecodef.c  utilities.c
